# TermAVG

./: .gitignore  Cargo.toml  README.md  layout.toml  script_.frs  setting.toml
resource/: bxy.chr  default_character.chr  fc.chr  mc.chr  script.fss  script_example.fs  script_example.fss
resource/mc/: mc.aseprite
src/: main.rs
tmj_app/: Cargo.toml
tmj_app/src/: app.rs  audio.rs  game.rs  gameflow.rs  layout.rs  lib.rs  setting.rs  utils.rs
tmj_app/src/art/: colors.rs  effect.rs  halfblock.rs  mod.rs  theme.rs
tmj_app/src/pages/: about.rs  dialogue.rs  load.rs  mainmenu.rs  mod.rs  save.rs  script_reader.rs  slot.rs
tmj_app/src/pages/pipeline/: background.rs  behaviour.rs  chapter.rs  character_ls.rs  dialogue_frame.rs  face.rs  layers.rs  mod.rs  paragraph.rs  render_ve.rs  typewriter.rs  ve_utils.rs  visual_element.rs
tmj_app/src/pages/pipeline/animation/: alpha_shift.rs  img_trans.rs  mod.rs  rect_trans.rs  typewriter.rs
tmj_app/src/pages/pop_items/: cmd.rs  history.rs  history_ls.rs  mod.rs
tmj_app/src/pages/script_def/: character.rs  env.rs  mod.rs  text_obj.rs  var_bg.rs  var_bgm.rs  var_chapter.rs  var_character_ls.rs  var_env_effect.rs  var_frame.rs  var_layer.rs  var_paragraph.rs
tmj_app/src/utils/: mod.rs  script_preparser.rs
tmj_app/tests/: dialogue_spawn_smoke.rs
tmj_core/: Cargo.toml
tmj_core/src/: audio.rs  command.rs  event.rs  img.rs  lib.rs  pathes.rs
tmj_core/src/event/: events.rs  handler.rs  looper.rs  manager.rs  sender.rs
tmj_core/src/img/: shape.rs
tmj_core/src/script/: command.rs  command_executor.rs  context.rs  function.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs  rust_object.rs  script_parsers.rs  session.rs  table.rs  task_queue.rs  type_registry.rs  value.rs  value_convert.rs
tmj_macro/: Cargo.toml
tmj_macro/src/: lib.rs
