[package]
name = "tmj"
version = "0.1.0"
edition = "2024"
publish = ["rsproxy"]

[workspace]
members = [
"tmj_app",
"tmj_core", 
"tmj_macro",
]

[workspace.lints.clippy]
assigning_clones = "allow"
type_complexity = "allow"
map_clone = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
manual_range_contains = "allow"

[workspace.dependencies]
crossterm = { version = "0.29.0" }
ratatui = "0.30.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
json5 = { version = "1.3.1" }

strum = { version = "0.27.2" }
strum_macros =  {version = "0.27.0"}
anyhow = "1.0"

chrono = "0.4"
home = "0.5"
flexi_logger = { version = "0.29", default-features = false }
image = { version = "0.25", default-features = false, features = [ "png" ] }
lazy_static = "1"

rand = "0.9"
rand_chacha = "0.9"
rodio = { version = "0.20", features = [ "vorbis" ] }
tracing = "0.1"
tracing-subscriber = "0.3"


[dependencies]
tmj_core = { path = "tmj_core" }
tmj_app = { path = "tmj_app" }

serde = {workspace = true}
ratatui = {workspace = true}
strum = {workspace = true}
strum_macros =  {workspace = true}
crossterm = {workspace = true}
tracing =  {workspace = true}
tracing-subscriber = {workspace = true}
anyhow = {workspace = true}
image = {workspace = true}

