[package]
name = "tmj_app"
version = "0.1.0"
edition = "2024"
publish = ["rsproxy"]

[dependencies]
tmj_core = {path = "../tmj_core"}

rodio = {workspace = true}
crossterm = { workspace = true }
ratatui ={ workspace = true }
image = {workspace = true}
anyhow = { workspace = true }
strum = {workspace = true}
strum_macros = {workspace = true}
json5 = {workspace = true}

tracing =  {workspace = true}
tracing-subscriber = {workspace = true}
serde = {workspace = true}
educe = { workspace = true}
toml = {workspace = true}
constcat = "0.6"

regex = "1"
once_cell = "1"

inventory = "0.3"

time = { version = "0.3.0" }
rand = {workspace = true}
rand_chacha = {workspace = true}
indoc = { version = "2.0.7"}
palette = { version = "0.7.6"}

[lints]
workspace = true
