[package]
name = "tmj_core"
version = "0.1.0"
edition = "2024"
publish = ["rsproxy"]

[lints]
workspace = true
[dependencies]
tmj_macro = {path = "../tmj_macro"}

crossterm = { workspace = true }
ratatui ={ workspace = true }
anyhow = { workspace = true }
rodio = {workspace = true}
image = {workspace  = true}

strum ={ workspace = true }
strum_macros ={ workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

tracing =  {workspace = true}
tracing-subscriber = {workspace = true}
